--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ python:
   - "3.6"      # current default Python on Travis CI
   - "3.7"
   - "3.8"
+
+# command to install package
+install:
+  - pip install -e .
+
 # command to run tests
 script:
   - pytest
