--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ python:
 # command to install package
 install:
   - pip install -e .
+  - pip install coverage
 
 # command to run tests
 script:
-  - pytest
+  - pytest tests/unit/ --cov datacaster
 
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash)
