--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 
 # command to install package
 install:
-  - pip install -e .
+  - pip install -e ".[test]"
   - pip install coverage
 
 # command to run tests
